Fix Java 9 CloudI API Integer constructor deprecation error.